copy basic calendar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>カレンダー</title>
+        <title>カレンダーアプリ</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     </head>
@@ -16,7 +16,7 @@
             </div>
             
             <table class="table-calendar" id="calendar" data-lang="ja">
-                <thead id="thead-month"></thead>
+                <thead id="thead-month"></thead>               
                 <tbody id="calendar-body"></tbody>
             </table>
             
