change color of sunday and saturday

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h4 id="monthAndYear"></h4>
             <div class="button-container-calendar">
                 <button id="previous" onclick="previous()">‹</button>
+                <button id="thisMonth" onclick="thisMonth()">今月</button>
                 <button id="next" onclick="next()">›</button>
             </div>
             
