--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </table>
             
             <div class="footer-container-calendar">
-                <label for="month">日付指定：</label>
+                <label for="month">月指定：</label>
                 <select id="month" onchange="jump()">
                     <option value=0>1月</option>
                     <option value=1>2月</option>
@@ -42,6 +42,7 @@
       </div>
   
       <script src="js/calendar.js" type="text/javascript"></script>
+      <script src="js/event.js" type="text/javascript"></script>
     </body>
 
 </html>
