add deleteEvent function

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                     <input type="text" id="eventTitle" placeholder="予定のタイトルを入力">
                     <button id="addEvent-Button" onclick="addEvent()">登録</button>
                 </div>
+                <p></p>
+                <div class="modeChange-container">
+                    <label class="toDeleteMode-Button">現在のモード「 <span>閲覧</span> 」</label>
+                    <button class="toDeleteMode-Button" onclick="toDeleteMode()">変更</button>
+                    <label class="toViewMode-Button"> 現在のモード「 <span>削除</span> 」</label>
+                    <button class="toViewMode-Button" onclick="toViewMode()">変更</button>
+                </div>
                 
             </div>
       </div>
