--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </div>
       </div>
   
+      <script src="js/mode.js" type="text/javascript"></script>
       <script src="js/event.js" type="text/javascript"></script>
       <script src="js/calendar.js" type="text/javascript"></script>
     </body>
