--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
             </div>
       </div>
   
+      <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+      <script src="js/firebase_config.js" type="text/javascript"></script>
       <script src="js/mode.js" type="text/javascript"></script>
       <script src="js/event.js" type="text/javascript"></script>
       <script src="js/calendar.js" type="text/javascript"></script>
